Added few more logics