@@ -10,7 +10,7 @@ public class MergeLists {
     public static void main(String[] args) {
         List<Integer> list1 = Arrays.asList(1,2,3,4,5,6);
         List<Integer> list2 = Arrays.asList(4,5,6,4,7,8);
-        List<Integer> allElements = Stream.concat(list1.stream(),list2.stream()).collect(Collectors.toList());
+        List<Integer> allElements = Stream.concat(list1.stream(),list2.stream()).toList();
         System.out.println("All Elements : "+allElements);
 
         Set<Integer> uniqueElements = new HashSet<>(allElements);
